Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12106

Memory leak in Mac proxy support (macQueryInternal)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.0
    • Network
    • None
    • MacOSX
    • macOS
    • bca7646d81d8c580820cf5f6e52122da6d984c6b

      Mac systems with the system proxy support enabled (default) leak memory from macQueryInternal() in /src/network/kernel/qnetworkproxy_mac.cpp.

      macQueryInternal() gets a CFDictionary from SCDynamicStoreCopyProxies(), but never releases the dictionary. In a heavy network application, this can leak several megabytes within minutes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mgoetz Markus Goetz (Inactive)
            mjwyman Michael Wyman
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes