Network Proxy Query: Fix memleak on OS X

Task-number: QTBUG-12106